--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
   "devDependencies": {
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.28",
+    "postcss-import": "^16.1.0",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21",
+    "normalize.css": "^8.0.1",
+    "postcss-mixins": "^10.0.1",
+    "postcss-preset-env": "^9.5.14"
   }
 }
